[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
"discord.py" = "^2.1.0"
discord = "^2.1.0"
luma = "^2.1.5"
wavelink = "^1.3.3"
bs4 = "^0.0.1"
pygame = "^2.1.2"
google-search = "^1.1.1"
youtube_dl = "^2021.12.17"
python-dotenv = "^0.21.0"
PyNaCl = "^1.5.0"
ffmpeg = "^1.4"
selenium = "^4.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"